# AstroWeb

./: AstroWeb.cpp  README.md
AstroWeb (back)/: AstroWeb.cpp  CMakeLists.txt
astroweb.ru (front)/: index.html
astroweb.ru (front)/astroweb/: index.html
astroweb.ru (front)/astroweb/components/: header_user.html  home.html  not_auth.html
astroweb.ru (front)/astroweb/scripts/: header.js  home.js  login.js  logout.js  render_image.js
astroweb.ru (front)/components/: header.html  header_user.html
astroweb.ru (front)/login/: index.html
astroweb.ru (front)/scripts/: config.js  header.js  home.js  login.js  logout.js  render_image.js
astroweb.ru (front)/styles/: header.css  main.css
